--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "babel": "^6.23.0",
     "classnames": "^2.5.1",
     "next": "^14.2.5",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "sass": "^1.77.8",
     "socket.io-client": "^4.7.5"
   },
