--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "rechart": "^0.0.1",
+    "recharts": "^2.12.7",
     "sass": "^1.77.8",
     "socket.io-client": "^4.7.5"
   },
