--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "axios": "^1.7.3",
     "babel": "^6.23.0",
     "classnames": "^2.5.1",
+    "mongodb": "6.8",
+    "mongoose": "^8.5.3",
     "next": "^14.2.5",
     "next-auth": "^4.24.7",
     "react": "^18",
